--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <!-- 
+  <!--
     normalize.css removes cross-browser differences in defaults, e.g.,
     differences in how form elements appear between Firefox and IE
     See: http://necolas.github.com/normalize.css/
@@ -18,6 +18,24 @@
   <title></title>
 </head>
 <body>
+  <nav>
+    <ul>
+      <% if current_user %>
+        <a href="/">Home</a>
+        <a href="/users/<%= current_user.id %>">Profile</a>
+        <a href="/sessions/<%= current_user.id %>">Sign Out</a>
+      <% else %>
+        <form name="user" action="/sessions/error" method="post">
+          E-mail: <input type="text" name="user[email">
+          Password: <input type="password" name="user[password]">
+          <input type="submit" name="signin" value="Sign In">
+          <input type="submit" name="signin" value="Sign Up">
+        </form>
+        <p class="error"><%= @error %></p>
+      <% end %>
+    </ul>
+  </nav>
+
   <%= yield %>
 </body>
 </html>
